--- a/index.html
+++ b/index.html
@@ -61,12 +61,55 @@
   <div class="italy"><button>Italy</button></div>
   <div class="eng"><button>England</button></div>
   <div class="bang"><button>Bangkok</button></div>
-  <div class="ned"><a href=""><button>France</button></a></div>
-  <div><button>Nederland</button></div>
+  <div class="france"><a href=""><button>France</button></a></div>
+  <div class="ned"><button>Nederland</button></div>
   </div>
-  
-  <div><img src="images.html/florence.jpeg" alt=""> <img src="images.html/venice.jpeg" alt=""></div>
-  <div><img src="images.html/town-in-italy.jpeg" alt=""></div>
-  <div><img src="images.html/mitaly.jpeg" alt=""><img src="images.html/rome.jpeg" alt=""></div>
+  <div id="topdest">
+  <div cl><img src="images.html/florence.jpeg" style="width:550px;" height="335px"> <br><img src="images.html/venice.jpeg" style="width: 550px;" height="335px"></div>
+  <div><img src="images.html/town-in-italy.jpeg" style="width:450px;">
+  </div>
+  <div><img src="images.html/mitaly.jpeg" style="width: 450px;" height="330px"><br><img src="images.html/rome.jpeg" style="width: 450px;" height="330px"></div>
+  </div>
+
+  <div class="title" ><h1>Our Clients Reviews</h1></div>
+
+  <div id="ratingstar">
+  <div>
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt=""> <br> It is a long established fact that a reader be <br>distracted by the readable content of page <br>when looking at its layout.The point using <br>Lorem Ipsum is that has. <br>
+    <img src="images.html/" alt="">
+  </div>
+  <div>
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt=""> <br> It is a long established fact that a reader be <br>distracted by the readable content of page <br>when looking at its layout.The point using <br>Lorem Ipsum is that has. <br>
+    <img src="images.html/" alt="">
+  </div>
+  <div>
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt="">
+    <img src="images.html/icons8-star-filled-48.png" alt=""> <br> It is a long established fact that a reader be <br>distracted by the readable content of page <br>when looking at its layout.The point using <br>Lorem Ipsum is that has. <br>
+    <img src="images.html/" alt="">
+  </div>
+  </div>
+
+  <div id="blog"><h1>Our Blog</h1> <br>It is a long established fact that page when will be distracted by the readable by the readable content of <br>page when looking at its layout.</div>
+
+  <div id="florence">
+  <div id="exploring">
+  <p>February 6,2024 <br> <h1>Exploring Florence:Tuscany's Timless Beauty</h1>it is  a long established fact that a reader will be distracted by the readable content of a <br>page when looking at its layout. The point of using Lorem Ipsum..</b></p>
+</div>
+
+  <div><p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p> <img class="arroww" src="images.html/icons8-up-right-32.png" alt="">
+  <p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p><img class="arroww" src="images.html/icons8-up-right-32.png" alt="">
+  <p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p> <img class="arroww" src="images.html/icons8-up-right-32.png" alt=""></div>
+  </div>
 </body>
 </html>
