--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div id="discover">
     <h1>EXperience Life Through <br> Travel & Enjoyment</h1> <br>
     <p>Discover your Next Great Advenure, Become An Explorer <br>To Get Started!</p>
-  <button class="book">Book A Trip Now &nbsp;&nbsp;&nbsp;<a href=""><img src="images.html/icons8-circled-up-right-50 (1).png" style="background-color: aliceblue;"></a></button>
+  <button class="book">Book A Trip Now &nbsp;&nbsp;&nbsp;<a href=""><img src="images.html/icons8-circled-up-right-50 (1).png" style="background-color: aliceblue;" width="25px"></a></button>
   </div>
   </div>
 
@@ -30,15 +30,15 @@
     <div id="line2"><p>It is a long established fact that page when will be the readable content of <br> a page when looking at its layout.</p></div>
   </div>
     <div id="travel">
-  <div><img class="photo1" src="images.html/floating restaurant.jpeg" style="width: 400px;">
+  <div><img class="photo1" src="images.html/floating restaurant.jpeg" style="width: 300px;">
   <figcaption><h1>Grand Canyon</h1>
      <p>It is a long established fact that a reader will be ditraced <br> by the readable content of a page when lookin</p><br> $500/person <img src="images.html/icons8-star-filled-48.png" alt="">
   </figcaption></div>
- <div><img class="photo2" src="images.html/beach.jpeg" style="width: 400px;">
+ <div><img class="photo2" src="images.html/beach.jpeg" style="width: 300px;">
   <figcaption><h1>Bora Bora</h1>
     <p>It is a long established fact that a reader will be ditraced <br> by the readable content of a page when lookin</p><br> $450/person <img src="images.html/icons8-star-filled-48.png" alt="">
  </figcaption></div>
-<div><img class="photo3" src="images.html/rome.jpeg" style="width: 400px;">
+<div><img class="photo3" src="images.html/rome.jpeg" style="width: 300px;">
   <figcaption><h1>Angkor Wat</h1>
     <p>It is a long established fact that a reader will be ditraced <br> by the readable content of a page when lookin</p><br> $200/person <img src="images.html/icons8-star-filled-48.png" style="width: 20%;">
  </figcaption></div>
@@ -65,10 +65,10 @@
   <div class="ned"><button>Nederland</button></div>
   </div>
   <div id="topdest">
-  <div cl><img src="images.html/florence.jpeg" style="width:550px;" height="335px"> <br><img src="images.html/venice.jpeg" style="width: 550px;" height="335px"></div>
-  <div><img src="images.html/town-in-italy.jpeg" style="width:450px;">
+  <div cl><img src="images.html/florence.jpeg" style="width:400px;" height="335px"> <br><img src="images.html/venice.jpeg" style="width: 400px;" height="335px"></div>
+  <div><img src="images.html/town-in-italy.jpeg" style="width:400px;" height="674px">
   </div>
-  <div><img src="images.html/mitaly.jpeg" style="width: 450px;" height="330px"><br><img src="images.html/rome.jpeg" style="width: 450px;" height="330px"></div>
+  <div><img src="images.html/mitaly.jpeg" style="width: 300px;" height="330px"><br><img src="images.html/rome.jpeg" style="width: 300px;" height="340px"></div>
   </div>
 
   <div class="title" ><h1>Our Clients Reviews</h1></div>
@@ -104,12 +104,13 @@
 
   <div id="florence">
   <div id="exploring">
-  <p>February 6,2024 <br> <h1>Exploring Florence:Tuscany's Timless Beauty</h1>it is  a long established fact that a reader will be distracted by the readable content of a <br>page when looking at its layout. The point of using Lorem Ipsum..</b></p>
+  <p id="Tuscany">February 6,2024 <br> <h2>Exploring Florence:Tuscany's Timless Beauty</h2>it is  a long established fact that a reader will be distracted by the readable content of a <br>page when looking at its layout. The point of using Lorem Ipsum..</b></p>
 </div>
 
-  <div><p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p> <img class="arroww" src="images.html/icons8-up-right-32.png" alt="">
+  <div id="March"><p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p> <img class="arroww" src="images.html/icons8-up-right-32.png" alt="">
   <p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p><img class="arroww" src="images.html/icons8-up-right-32.png" alt="">
-  <p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p> <img class="arroww" src="images.html/icons8-up-right-32.png" alt=""></div>
+  <p>March 01,2024 <br><b>Italy Travel Pricing Details.</b> <br>It is a long established fact that a reader will be distracted by the <br>reafdable content of a page when looking ata its layout...</p> <img class="arroww" src="images.html/icons8-up-right-32.png" alt="">
+</div>
   </div>
 </body>
 </html>
